.provarCaches/00D6C0000000xA6UAI/objects/sked__Templated_Activity__c.object
<CustomObject>
    <fields>
        <fullName>sked__Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Duration__c</fullName>
        <label>Duration</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>sked__Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location</label>
        <referenceTo>sked__Location__c</referenceTo>
        <relationshipLabel>Templated Activities</relationshipLabel>
        <relationshipName>Templated_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Resource__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Resource</label>
        <referenceTo>sked__Resource__c</referenceTo>
        <relationshipLabel>Templated Activities</relationshipLabel>
        <relationshipName>Templated_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Schedule_Template__c</fullName>
        <label>Schedule Template</label>
        <referenceTo>sked__Schedule_Template__c</referenceTo>
        <relationshipLabel>Templated Activities</relationshipLabel>
        <relationshipName>Templated_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Start_Offset_Days__c</fullName>
        <label>Start Offset Days</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Start_Time_Of_Day__c</fullName>
        <label>Start Time Of Day</label>
        <required>true</required>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>sked__Timezone__c</fullName>
        <label>Timezone</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meal Break</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Templated Activity</label>
    <nameField>
        <displayFormat>TAC-{0000}</displayFormat>
        <label>Templated Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templated Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sked__QuantityNullOrPositive</fullName>
        <active>true</active>
        <description>Quantity of Resources required must be null or greater than 0</description>
        <errorConditionFormula>AND( NOT( ISNULL( sked__Quantity__c ) ) , sked__Quantity__c  &lt;= 0 )</errorConditionFormula>
        <errorDisplayField>sked__Quantity__c</errorDisplayField>
        <errorMessage>Quantity of Resources required must be null or greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__StartOffsetDaysNonNegative</fullName>
        <active>true</active>
        <errorConditionFormula>sked__Start_Offset_Days__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>sked__Start_Offset_Days__c</errorDisplayField>
        <errorMessage>Start Offset Days Must be non-negative</errorMessage>
    </validationRules>
</CustomObject>